syntax = "proto3";

package chef.habitat.supervisor.event;
import "google/protobuf/timestamp.proto";

message SupervisorMetadata {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message ServiceMetadata {
  // todo: make a FQPI type
  string package_ident = 1;
  // not necessarily FQPI
  string spec_ident = 2;
  // todo: make / reuse a real type?
  string service_group = 3;
}

////////////////////////////////////////////////////////////////////////
// Concrete Event Types
////////////////////////////////////////////////////////////////////////

message ServiceStartedEvent {
  SupervisorMetadata supervisor_metadata = 1;
  ServiceMetadata service_metadata = 2;
}

message ServiceStoppedEvent {
  SupervisorMetadata supervisor_metadata = 1;
  ServiceMetadata service_metadata = 2;
}
